--- a/data/journal/files/data-DC01/index.html
+++ b/data/journal/files/data-DC01/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AW - Data File no.BO2</title>
+    <title>AW - Data File no.DCO1</title>
 
     <link rel="stylesheet" href="../../../../assets/css/journal.css">
     <link rel="stylesheet" href="../../../../assets/css/index.css">
@@ -11,7 +11,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</head>
 </head>
 <body>
   <header>
@@ -35,7 +34,7 @@
     <div class="bd-masthead mb-3 main-content" id="content">
       <div class="container-xxl bd-gutter">
         <div class="col-lg-7 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
-          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.BO2</h2>
+          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.DC01</h2>
           <p>Hi, who am I? I'm Kanaede, I like living like a shark, are you confused? So... do you know Gura? Yea, I think it's like that.</p>
           <p>Shark, like Gura, she is cute right? But you know they are shark... and me too.  I am a shark in the sea of humanity. And my personality like a shark too, I like sea, water, and... do you know the sound of water if you are submerging your head in water? I like that! Quiet and Comfortable.</p>
           <p>Who knows, Gura have two sides right? Me too, I don't know why I'm feel that, looks exciting, crossing the sea as if flying like a bird.</p>
