--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
           Silence shows that the time has not yet come, it doesn't mean you're afraid or lazy.
         </p>
       </div>
+      <div class="mx-auto pb-3 mb-3 mb-md-3 h4 text-recenter">
+        Don't show this website to my parents, I mean my real parents. Please.. please don't do that, until I show them this website. <br>
+          My dream is to become a legend, for all humans. Those of you who read this, I hope you are still conscious, still alive and still fighting. I know, you don't need me to do it all. <br>
+          Goodbye, This is the END of my story. I am me, I am not the person you know in the real world.
+      </div>
     </div>
   </main>
 </body>
