--- a/data/journal/files/data-180424/index.html
+++ b/data/journal/files/data-180424/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AW - Data File no.A6D</title>
+    <title>AW - Data File no.250324</title>
 
     <link rel="stylesheet" href="../../../../assets/css/journal.css">
     <link rel="stylesheet" href="../../../../assets/css/index.css">
@@ -33,11 +33,18 @@
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
       <div class="container slom bd-gutter">
-        <div class="col-lg-7 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
-          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.A6D</h2>
+        <div class="col-lg-12 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
+          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.180424</h2>
+          <P>
+            I woke up today, why did I wake up? What's special? <br>
+            I don't know... but my dream seems to be telling me something.. I can see it, asking me "Who are you, why are you so different from us." And without my control, I answered, "I am someone from the Future and the Past." <br>
+            Then after I said that to him I woke up from my dream. I was scared and confused by what I said. <strong>I'm someone from the Future and the Past,</strong> I always think about this for a while after waking up.
+          </P>
           <p>
-            I took a walk to the river looking for a comfortable place, the river I visited was a river in the middle of the forest. I saw traces of rubbish scattered among the bamboo above, meaning the river had flooded before, I sat on the edge, lit a campfire. <br><br>
-            Calm with the ground still wet from the rain the previous day, making a campfire was a little difficult, but in my own way it worked. After a few hours there I calmed myself down and went to a cafe, yeah I didn't bring much money.
+            Why... why this dream, why did I wake up? That scared me! He asked when we were in the train, there was no one else but us. Alone, he seemed to represent billions of billions of people to me, yes I.. <strong>DIFFERENT</strong>. <br>
+            Sad, why am I different from other people? Why am I here.. what am I doing here? I'm useless. <br>
+            After that.. I'm pensive and sitting still as if sleeping with his eyes open, until my Mom shouts to me "Hey woke up, don't be stunned!" I want to cry, but nobody lets me cry or think about what I want. <br>
+            Rules and Destiny, World and Dreams.. continuing without a care in the world is like a bulldozer pushing the ground without mercy.
           </p>
         </div>
       </div>
