--- a/data/journal/files/data-250324/index.html
+++ b/data/journal/files/data-250324/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AW - Data File no.A6D</title>
+    <title>AW - Data File no.250324</title>
 
     <link rel="stylesheet" href="../../../../assets/css/journal.css">
     <link rel="stylesheet" href="../../../../assets/css/index.css">
@@ -33,11 +33,16 @@
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
       <div class="container slom bd-gutter">
-        <div class="col-lg-7 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
-          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.A6D</h2>
+        <div class="col-lg-12 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
+          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.250324</h2>
+          <P>
+            Aku sakit, dan tidak ada yang peduli selain Ibuku. Ayahku hanya melihatku dan pergi, begitulah setiap hari untuk beberapa hari, diabaikan dalam keadaan lemas. <br><br>
+            Aku tidak tau mengapa ini harus terjadi disaat itu, banyak tugas menumpuk, dan terlebih tidak ada koneksi internet karena dengan bodohnya ayahku mencabut sendiri wifi untuk diganti dengan model lain. <br>
+            Apa yang harus aku lakukan, tidak ada internet.. itu sama saja seperti menghilangkan interaksiku ke dunia luar, karena itu satu satunya jalan agar aku bisa bereksplorasi.
+          </P>
           <p>
-            I took a walk to the river looking for a comfortable place, the river I visited was a river in the middle of the forest. I saw traces of rubbish scattered among the bamboo above, meaning the river had flooded before, I sat on the edge, lit a campfire. <br><br>
-            Calm with the ground still wet from the rain the previous day, making a campfire was a little difficult, but in my own way it worked. After a few hours there I calmed myself down and went to a cafe, yeah I didn't bring much money.
+            I'm not understand, I'm very want to know about this time, I left my work, and I left some important tasks.. because I got fever and I just can see my house is very berantakan. <br>
+            Why my father not see that? Why just wake up and go work again? Nobody cares about this house, only my Mother that very care about it. And my siblings is very mengganggu, they say "Why you not work? I won't to help your tasks.", I'm angry but I still hold it, I know.. I'm bad. 
           </p>
         </div>
       </div>
