--- a/data/journal/files/data-030424/index.html
+++ b/data/journal/files/data-030424/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AW - Data File no.A6D</title>
+    <title>AW - Data File no.030424</title>
 
     <link rel="stylesheet" href="../../../../assets/css/journal.css">
     <link rel="stylesheet" href="../../../../assets/css/index.css">
@@ -33,12 +33,18 @@
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
       <div class="container slom bd-gutter">
-        <div class="col-lg-7 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
-          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.A6D</h2>
+        <div class="col-lg-12 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
+          <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.030424</h2>
+          <P>
+            Again, once again? Why... I don't understand. I don't know what you want from me. But... why you give me that... again.
+          </P>
           <p>
-            I took a walk to the river looking for a comfortable place, the river I visited was a river in the middle of the forest. I saw traces of rubbish scattered among the bamboo above, meaning the river had flooded before, I sat on the edge, lit a campfire. <br><br>
-            Calm with the ground still wet from the rain the previous day, making a campfire was a little difficult, but in my own way it worked. After a few hours there I calmed myself down and went to a cafe, yeah I didn't bring much money.
+            So sad, why they all want to help me? I'm useless.. I know that's not true, but don't look me like can don anything. I just normal person, mean.. not a god or hero. Yeah, I'm someone can help or bite. <br>
+            I'm not understand.. Why you.. uhh... forget it, I'm... I don't know.. I'm confused for now, forget it and I don't care my life. Nevermind.. I'm very, very confused and don't know my fate.
           </p>
+          <P>
+            Then.. I always ask this.. "Why I'm here? Why this time is very fast? One day, One month, Two years"
+          </P>
         </div>
       </div>
     </div>
