--- a/data/journal/files/data-101223/index.html
+++ b/data/journal/files/data-101223/index.html
@@ -32,7 +32,7 @@
   </header>
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
-      <div class="container-xxl bd-gutter">
+      <div class="container slom bd-gutter">
         <div class="col-lg-12 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
           <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.101223A</h2>
           <p>Confusion mounts, tasks overwhelm, disaster strikes. As an introvert, I have to face various clashes and a hard life in social life.</p>
