--- a/data/journal/files/data-BO2/index.html
+++ b/data/journal/files/data-BO2/index.html
@@ -32,7 +32,7 @@
   </header>
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
-      <div class="container-xxl bd-gutter">
+      <div class="container slom bd-gutter">
         <div class="col-lg-7 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
             <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.BO2</h2>
             <p>Everyone laughed at my stupidity and craziness, not a single person wanted to look at me, let alone help me. Why do humans have no heart, why in their heads flattery is better than friends, why?</p>
