--- a/data/journal/files/data-DC01/index.html
+++ b/data/journal/files/data-DC01/index.html
@@ -32,7 +32,7 @@
   </header>
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
-      <div class="container-xxl bd-gutter">
+      <div class="container slom bd-gutter">
         <div class="col-lg-7 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
           <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.DC01</h2>
           <p>Hi, who am I? I'm Kanaede, I like living like a shark, are you confused? So... do you know Gura? Yea, I think it's like that.</p>
