--- a/data/journal/files/data-Y1H/index.html
+++ b/data/journal/files/data-Y1H/index.html
@@ -32,7 +32,7 @@
   </header>
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
-      <div class="container-xxl bd-gutter">
+      <div class="container slom bd-gutter">
         <div class="col-lg-12 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
           <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.Y1H</h2>
           <p>I looked for a laptop for my father, he wanted a standard laptop, but he wanted me to be able to use the laptop too, I looked for a fairly expensive price, but when I told him he said "Can you make money with that high-spec laptop?"</p>
