--- a/data/journal/files/data-Y2H/index.html
+++ b/data/journal/files/data-Y2H/index.html
@@ -32,15 +32,15 @@
   </header>
   <main>
     <div class="bd-masthead mb-3 main-content" id="content">
-      <div class="container-xxl bd-gutter">
+      <div class="container slom bd-gutter">
         <div class="col-lg-12 mx-auto pb-3 mb-3 mb-md-5 text-md-center">
           <h2 class="display-5 mb-3 fw-semibold lh-sm">Data File No.Y2H</h2>
           <P>
             WHY, Why every I watched an anime and everything is related to Destiny. World! Why you do it? Pain, and war... What do you want from me, World?
           </P>
           <p>
-            But, thanks... I learn a lot from anime, no matter if I'm a weeaboo. But why? Every new year... I'm sad. Nobody wanted to hear me, but I felt like I was talking to someone invisible, they were from another world. <br>
-            I always want to hear the world, but I'm just a weak person.. "WHY" I always ask myself that, I don't know. I cried without anyone noticing me. I'm sad without anyone caring about me, I'm angry without anyone who can help me. <br>
+            But, thanks... I learn a lot from anime, no matter if I'm a weeaboo. But why? Every new year... I'm sad. <br> Nobody wanted to hear me, but I felt like I was talking to someone invisible, they were from another world. <br>
+            I always want to hear the world, but I'm just a weak person.. "WHY" I always ask myself that, I don't know. I cried without anyone noticing me. <br> I'm sad without anyone caring about me, I'm angry without anyone who can help me. <br>
             I want know, why I'm not scary about death, I think this life just a joke in a game..
           </p>
           <p>
@@ -49,8 +49,17 @@
             Drunk? I mean, I'm drunk because I'm so sleepy. I think I'm dreaming as I write this, I don't think I'm here, not on earth.
           </p>
           <p>
-            10/02/2024 - 20:12 <br>
+            <strong class="h4">10/02/2024 - 20:12</strong><br>
             Sleepy... I think I will continue later.
+          </p>
+          <p>
+            Hi, I'm back.. but.. I'm still sleepy. I write this with no sad anymore, yeah, I know.. I'm still sad abut this world. <br>
+            So.. I watched a anime, and when I watch episode 14 I feel bored. But episodes 1-12 is awesome.. that remind me about this world. <br>
+            Broken, myself, I know.. even I a shark.
+          </p>
+          <p>
+            You can ask about this website to me, but you can't ask about what is the mean of this website. <br>
+            I just
           </p>
         </div>
       </div>
